feat: add request counter filter
